--- a/SoundFileExploration.ipynb
+++ b/SoundFileExploration.ipynb
@@ -27,8 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "import librosa\n",
@@ -55,13 +59,18 @@
     "from pyspark.streaming import StreamingContext\n",
     "import soundfile as sf\n",
     "import io\n",
-    "import threading"
+    "import threading\n",
+    "from keras.models import load_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "# Define the path to the main dataset directory containing 'fold1' to 'fold10'\n",
@@ -70,8 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -101,8 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "# Create an empty list of features and labels\n",
@@ -155,8 +172,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load features and labels (to save time during development)\n",
@@ -173,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of feature vectors: 8732\n"
+      "Number of feature vectors: 0\n"
      ]
     }
    ],
@@ -191,14 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature vector length: 13\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Paul\\Downloads\\Masters\\MSc_DA_CA3\\SoundFileExploration.ipynb Cell 13\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Paul/Downloads/Masters/MSc_DA_CA3/SoundFileExploration.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Are the feature vectors all the same size?\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Paul/Downloads/Masters/MSc_DA_CA3/SoundFileExploration.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mFeature vector length:\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mlen\u001b[39m(feature_list[\u001b[39m0\u001b[39;49m]))\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -1606,6 +1631,111 @@
     "\n",
     "# Await termination for Spark Streaming\n",
     "ssc.awaitTermination()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"AudioProcessing\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "# Read audio data from Kafka topic\n",
+    "audio_stream = spark.readStream \\\n",
+    "    .format(\"kafka\") \\\n",
+    "    .option(\"kafka.bootstrap.servers\", \"localhost:9092\")  # Update with your Kafka broker address\n",
+    "    .option(\"subscribe\", \"UrbanSounds\")  # Kafka topic with audio data\n",
+    "    .load()\n",
+    "\n",
+    "# Define processing logic (you can replace this with your audio processing logic)\n",
+    "def process_audio_data(audio_data):\n",
+    "    # Your audio processing code here\n",
+    "    return audio_data\n",
+    "\n",
+    "# Apply the processing logic to the audio stream\n",
+    "processed_audio_stream = audio_stream.selectExpr(\"topic\", \"value as audio_data\") \\\n",
+    "    .withColumn(\"processed_audio\", process_audio_data(\"audio_data\"))\n",
+    "\n",
+    "# Define output options (e.g., write results to another Kafka topic)\n",
+    "output_options = {\n",
+    "    \"kafka.bootstrap.servers\": \"localhost:9092\",  # Update with your Kafka broker address\n",
+    "    \"topic\": \"processed_audio_topic\"  # Kafka topic for processed audio data\n",
+    "}\n",
+    "\n",
+    "# Write processed audio data to Kafka or another output sink\n",
+    "query = processed_audio_stream \\\n",
+    "    .select(\"topic\", \"processed_audio\") \\\n",
+    "    .writeStream \\\n",
+    "    .format(\"kafka\") \\\n",
+    "    .options(**output_options) \\\n",
+    "    .start()\n",
+    "\n",
+    "query.awaitTermination()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sounddevice as sd\n",
+    "import numpy as np\n",
+    "import kafka\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Initialize Kafka producer for writing classified audio data\n",
+    "producer = kafka.KafkaProducer(bootstrap_servers='localhost:9092')\n",
+    "\n",
+    "# Create a SparkSession\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"AudioProcessing\") \\\n",
+    "    .getOrCreate()\n",
+    "    \n",
+    "model = load_model('UrbanSound8K_model.h5')\n",
+    "\n",
+    "# Define a function to process and classify audio data\n",
+    "def process_and_classify_audio(audio_data):\n",
+    "    # Load the pre-trained neural network model (UrbanSound8K_model.h5)\n",
+    "    # Replace this with your actual model loading code\n",
+    "    # Example: model = load_model('UrbanSound8K_model.h5')\n",
+    "\n",
+    "    # Process and classify audio data using the loaded model\n",
+    "    # Example: predicted_class = model.predict_classes(np.array([audio_data]))[0]\n",
+    "\n",
+    "    # Send the classified result to a Kafka topic (e.g., \"classified_audio\")\n",
+    "    producer.send(\"classified_audio\", value=predicted_class.encode('utf-8'))\n",
+    "\n",
+    "# Start recording audio using sounddevice\n",
+    "def audio_callback(indata, frames, time, status):\n",
+    "    if status:\n",
+    "        print(status, flush=True)\n",
+    "    else:\n",
+    "        # Process and classify the recorded audio\n",
+    "        process_and_classify_audio(indata)\n",
+    "\n",
+    "# Define audio settings\n",
+    "CHUNK = 1024\n",
+    "FORMAT = np.int16\n",
+    "CHANNELS = 1\n",
+    "RATE = 44100\n",
+    "\n",
+    "# Create a PyAudio object for audio recording\n",
+    "audio_stream = sd.InputStream(callback=audio_callback, channels=CHANNELS, samplerate=RATE)\n",
+    "\n",
+    "# Start recording audio\n",
+    "with audio_stream:\n",
+    "    # Read audio data from the microphone and process/classify it in real-time\n",
+    "    while True:\n",
+    "        pass  # The audio_callback function will handle audio processing and classification\n",
+    "\n",
+    "# Wait indefinitely to keep the Spark Structured Streaming application running\n",
+    "spark.streams.awaitAnyTermination()"
    ]
   }
  ],
